artist menu to change